# renewal_wpr_analysis

./: .gitignore  pixi.toml
renewalwpranalysis/: README.md  pyproject.toml
renewalwpranalysis/notebooks/epi-data-notebooks/: Generate-case-target-data.ipynb  Generation_interval.ipynb  Reporting_delay.ipynb  WHO_covid_data_exploration.ipynb  vaccination.ipynb  variant-emergence.ipynb
renewalwpranalysis/notebooks/epi-data-notebooks/.ipynb_checkpoints/: Generate-case-target-data-checkpoint.ipynb  mobility-checkpoint.ipynb  vaccination-checkpoint.ipynb  variant-emergence-checkpoint.ipynb
renewalwpranalysis/notebooks/test-notebooks/: Untitled.ipynb  renewal-test-model.ipynb
renewalwpranalysis/renewal_analysis/: Malaysia-analysis.ipynb  Malaysia_results.xlsx  Philippines-analysis.ipynb  plotting.py  renew.bib  utils.py
renewalwpranalysis/renewal_analysis/data/mobility-data/: mobility-data.csv
renewalwpranalysis/renewal_analysis/data/target-data/: case-data.csv
renewalwpranalysis/renewal_analysis/data/vaccination-data/: vaccination-data.csv
renewalwpranalysis/renewal_analysis/data/variant-data/: variant-emergence.csv  variant-prevalence.csv
