[project]
name = "renewal_analysis"
version = "0.9.0"
dependencies = [
    "emu_renewal @ git+https://github.com/monash-emu/renewal.git@66299a8",
    "ipykernel",
    "ipywidgets",
    "nbformat"
]

[tool.setuptools]
packages = ["renewal_analysis"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"renewal_analysis.data" = ["data/**/*.csv", "data/**/*.json"]

[tool.black]
line-length = 100
